feat(console): add API entity to confirmation render

--- a/gravitee-apim-console-webui/src/management/api/creation/v4/api-creation-v4-confirmation.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/api-creation-v4-confirmation.component.html
@@ -21,7 +21,7 @@
       <div class="api-creation-confirmation__content__header__icon">
         <mat-icon svgIcon="gio:check"></mat-icon>
       </div>
-      <h2>My new API has been created</h2>
+      <h2 *ngIf="api">{{ api.name }} has been created</h2>
       <button mat-flat-button color="primary" (click)="navigate('management.apis.detail.portal.general')">
         Open my API in API Management
       </button>
