--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6/api-creation-v4-step-6.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6/api-creation-v4-step-6.component.html
@@ -126,14 +126,14 @@
   </div>
   <div class="api-creation-v4-step-6__footer">
     <div class="api-creation-v4-step-6__footer__actions">
-      <button mat-stroked-button type="button" (click)="createApi()">
+      <button mat-stroked-button type="button" (click)="createApi(false)">
         Create my API<mat-icon
           svgIcon="gio:info"
           class="api-creation-v4-step-6__footer__button-icon"
           matTooltip="Your API can't be consumed"
         ></mat-icon>
       </button>
-      <button color="primary" mat-raised-button type="button" (click)="deployApi()">
+      <button color="primary" mat-raised-button type="button" (click)="createApi(true)">
         Deploy my API<mat-icon
           svgIcon="gio:info"
           class="api-creation-v4-step-6__footer__button-icon"
