refactor(console): rework goToStep stepper method

--- a/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6/api-creation-v4-step-6.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/steps/step-6/api-creation-v4-step-6.component.html
@@ -42,7 +42,7 @@
           </div>
         </div>
         <div>
-          <button mat-stroked-button (click)="onChangeStepInfo(1)">Change</button>
+          <button mat-stroked-button (click)="onChangeStepInfo('API Metadata')">Change</button>
         </div>
       </div>
     </div>
@@ -75,7 +75,7 @@
           </div>
         </div>
         <div>
-          <button mat-stroked-button (click)="onChangeStepInfo(2)">Change</button>
+          <button mat-stroked-button (click)="onChangeStepInfo('Entrypoints')">Change</button>
         </div>
       </div>
     </div>
@@ -94,7 +94,7 @@
           </div>
         </div>
         <div>
-          <button mat-stroked-button (click)="onChangeStepInfo(3)">Change</button>
+          <button mat-stroked-button (click)="onChangeStepInfo('Endpoints')">Change</button>
         </div>
       </div>
     </div>
@@ -104,7 +104,7 @@
       <div class="api-creation-v4-step-6__step__body">
         <div class="api-creation-v4-step-6__step__info">🚧🚧🚧</div>
         <div>
-          <button mat-stroked-button (click)="onChangeStepInfo(4)">Change</button>
+          <button mat-stroked-button (click)="onChangeStepInfo('Security')">Change</button>
         </div>
       </div>
     </div>
@@ -119,7 +119,7 @@
           </div>
         </div>
         <div>
-          <button mat-stroked-button (click)="onChangeStepInfo(5)">Change</button>
+          <button mat-stroked-button (click)="onChangeStepInfo('Document')">Change</button>
         </div>
       </div>
     </div>
