--- a/gravitee-apim-console-webui/src/management/api/creation/v4/components/api-creation-stepper-menu/stepper-menu-step/stepper-menu-step.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/components/api-creation-stepper-menu/stepper-menu-step/stepper-menu-step.component.scss
@@ -1,7 +1,7 @@
 @use '@angular/material' as mat;
 @use '@gravitee/ui-particles-angular' as gio;
 
-.api-creation-step {
+.stepper-menu-step {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
