refactor(console): remove type steps to have labeled number to group

--- a/gravitee-apim-console-webui/src/management/api/creation/v4/components/api-creation-stepper-menu/api-creation-stepper-menu.component.html
+++ b/gravitee-apim-console-webui/src/management/api/creation/v4/components/api-creation-stepper-menu/api-creation-stepper-menu.component.html
@@ -23,9 +23,9 @@
 
   <div class="steps">
     <stepper-menu-step
-      *ngFor="let step of primarySteps; index as stepIndex"
-      [stepNumber]="stepIndex + 1"
-      [currentStep]="lastPrimaryStepIndex + 1"
+      *ngFor="let step of lastStepPerLabelNumber"
+      [stepNumber]="step.labelNumber"
+      [currentStep]="currentStep.labelNumber"
       >{{ step.label }}</stepper-menu-step
     >
   </div>
